# pelican-pico-theme

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pelicanconf.py  publishconf.py  pyproject.toml  setup.py
pelican_pico_theme/: __init__.py  inline_sections.py
static/css/: nlweb-chat.css  style.css  theme.css
static/js/: nlweb-chat.js
templates/: article.html  article_item.html  author.html  base.html  blog_list.html  category.html  content_list.html  footer.html  grid.html  index.html  navbar.html  nlweb_chat.html  page.html  social_card.html  tag.html  work_list.html
templates/macros/: grid.j2
templates/partials/: card_section.html
